--- a/lambda/generator/Dockerfile
+++ b/lambda/generator/Dockerfile
@@ -1,5 +1,10 @@
 FROM public.ecr.aws/lambda/python:3.12
 
+RUN dnf install -y \
+    iputils \
+    && dnf clean all \
+    && rm -rf /var/cache/dnf
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir \
     -r requirements.txt
