feat: use hugging-face provider for LLM tools

--- a/lambda/generator/.env.example
+++ b/lambda/generator/.env.example
@@ -1,6 +1,7 @@
 PINECONE_API_KEY=
-OPENAI_API_KEY=
-MISTRAL_API_KEY=
-HUGGING_FACE_API_KEY=
 PINECONE_INDEX_NAME=
+HUGGING_FACE_API_KEY=
 DEBUG=true
+LLAMA31_MODEL_ARN="llama3.1:8b"
+LLAMA32_MODEL_ARN="llama3.2:3b"
+TRIAGE_MODEL_ARN="hf.co/sungun19961/Network-Route-Agent:Q4_K_M"
